# JWTek

./: .gitignore  AGENTS.md  LICENSE  README.md  jwtek.py  pyproject.toml  request.txt  requirements.txt  setup.py
core/: exploits.py  extractor.py  parser.py  static_analysis.py
jwtek/: __main__.py
jwtek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jwtek/core/: audit.py  brute_forcer.py  bruteforce.py  converter.py  exploits.py  extractor.py  forge.py  parser.py  scraper.py  smuggle.py  static_analysis.py  ui.py  updater.py  validator.py
tests/: test_analyze_all_diffs.py  test_analyze_edit.py  test_bruteforce.py  test_cli_save_path.py  test_converter.py  test_extractor.py  test_forge.py  test_parser.py  test_scraper.py  test_static_analysis_claims.py  test_static_analysis_headers.py  test_ui.py  test_update.py  test_updater.py  test_validator_hmac.py
